--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+body {
+  background: blue;
+}
+
+a {
+  color: #967074;
+}
+
+.App-header {
+  margin: 30px 0;
+}
+
 .App-footer {
   text-align: center;
   margin: 30px 0;
