--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,25 @@
 body {
-  background: darkslategrey;
+  background: navy;
 }
 
 a {
-  color: #967074;
+  color: darkblue;
+}
+
+.App {
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .App-header {
   margin: 30px 0;
 }
 
+.App-logo {
+  max-width: 100px;
+  display: block;
+  margin: 0 auto;
+}
 .App-footer {
   text-align: center;
   margin: 30px 0;
